--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -12,19 +12,37 @@
 
             </div>
             {% for ingredient in ingredients %}
-            <div class="multiform multiform-item">
-              {{ ingredient.quantity_amount.label }}
-              {{ ingredient.quantity_amount }}
-              {{ ingredient.quantity }}
-              {{ ingredient.ingredient }}
+            <div class="multiform multiform-item row">
+              <div class="input-field col m1">
+                {{ ingredient.quantity_amount }}
+                <label>{{ ingredient.quantity_amount.label }}</label>
+              </div>
+              <div class="input-field col m3">
+                {{ ingredient.quantity }}
+                <label>Quantity type</label>
+              </div>
+              <div class="input-field col m7">
+                {{ ingredient.ingredient }}
+                <label>{{ ingredient.ingredient.label }}</label>
+              </div>
             </div>
             {% endfor %}
             <br/>
             <div class="multiform">
-              {{ ingredient_item.quantity_amount.label }}
-              {{ ingredient_item.quantity_amount }}
-              {{ ingredient_item.quantity }}
-              {{ ingredient_item.ingredient }}
+              <div class="input-field col m1">
+                {{ ingredient_item.quantity_amount }}
+                <label>{{ ingredient.quantity_amount.label }}</label>
+              </div>
+              <div class="input-field col m3">
+                {{ ingredient_item.quantity }}
+                <label>Quantity type</label>
+              </div>
+              <div class="input-field col m7">
+              </div>
+              <div class="input-field col m4">
+                {{ ingredient_item.ingredient }}
+                <label>{{ ingredient.ingredient.label }}</label>
+              </div>
             </div>
             <input type="submit" value="Save" class="btn btn-primary" />
           </form>
@@ -36,5 +54,13 @@
       <script src="{% static 'js/multiform.js' %}"></script>
       <script>
         $( ".multiform").multiForm("{{ ingredient_prefix }}");
+        var elem = document.querySelector('select');
+        var instance = M.FormSelect.init(elem);
+
+        // Or with jQuery
+
+        $(document).ready(function(){
+          $('select').formSelect();
+        });
       </script>
 {% endblock %}
