--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
     <![endif]-->
     <div class="navbar-fixed">
       <nav>
+        <a id="sidenav-trigger" href="#" data-target="slide-out" class="sidenav-trigger hide-on-large-and-up">
+          <i class="material-icons">menu</i>
+        </a>
         <div class="nav-wrapper">
           <a href="#" class="brand-logo">Logo</a>
           <ul class="right hide-on-med-and-down">
@@ -37,21 +40,14 @@
             <li><a href="{% url 'recipes.views.create' %}">Create recipe</a></li>
             <li><a href="#">Disabled</a></li>
           </ul>
-
-          <ul id="slide-out" class="sidenav">
-            <li class="active"><a class="nav-link" href="#">Home</a></li>
-            <li><a href="{% url 'recipes.views.recipes_view' %}">Recipes</a></li>
-            <li><a href="{% url 'recipes.views.create' %}">Create recipe</a></li>
-            <li><a href="#">Disabled</a></li>
-          </ul>
-          <!--a href="#" data-activates="mobile-demo" class="button-collapse">
-            <i class="material-icons">menu</i>
-          </a-->
-          <a href="#" data-activates="nav-mobile" class="button-collapse">
-            <i class="material-icons">menu</i>
-          </a>
         </div>
       </nav>
+      <ul id="slide-out" class="sidenav">
+        <li class="active"><a class="nav-link" href="#">Home</a></li>
+        <li><a href="{% url 'recipes.views.recipes_view' %}">Recipes</a></li>
+        <li><a href="{% url 'recipes.views.create' %}">Create recipe</a></li>
+        <li><a href="#">Disabled</a></li>
+      </ul>
     </div>
     <div class="container">
       {% block content %}
