--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,9 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js">
     </script>
+    <!-- script
+        src="{% static "js/materialize.js" %}">
+    </script -->
     <script>
       window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
       var elem = document.querySelector('.sidenav');
