--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -6,7 +6,7 @@
         <div class="col s12">
           <form action="" method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form.materialize }}
             {% for ingredient in ingredients %}
             <div class="{{ ingredient_prefix }}-multiform_item row">
               <div class="input-field col m1">
